Me he quedado haciendo la desunión de los viajes (alertas)

--- a/tfg/package.json
+++ b/tfg/package.json
@@ -20,5 +20,8 @@
         "sass": "^1.32.11",
         "sass-loader": "^10",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.4.8"
     }
 }
